# CN7023

./: .gitattributes  .gitignore  CN7023_Technical_Report.md  LICENSE  Makefile  README.md  ann_dataset.py  config.yaml  cv_viz.py  eval.py  gradcam.py  pyproject.toml  requirements.txt  train.py  train_ann_baseline.py  visualize_results.py
.github/workflows/: ci.yml
matlab/: leaf_preprocess.m
matlab_optional/: extract_feats.m  seg_masks.m
report_assets/: ann_metrics.json  classification_report.txt  evaluation_metrics.json  fusion_metrics.json  metrics.json  synthetic_demo_report.txt
src/: __init__.py  aug.py  custom_imagefolder.py  data.py  data_complex.py  demo_synth.py  eval_cnn.py  features.py  fuse.py  gradcam.py  train_ann.py  train_cnn.py  utils.py
src/models/: __init__.py  ann.py  cnn.py
